--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"dependencies": {
 		"@types/p5": "^1.6.2",
 		"solid-js": "^1.6.4",
-		"solid-p5-wrapper": "1.0.5"
+		"solid-p5-wrapper": "1.0.5",
+		"the-new-css-reset": "^1.8.4"
 	},
 	"devDependencies": {
 		"vite": "^4.0.0",
