--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	},
 	"dependencies": {
 		"@types/p5": "^1.6.2",
+		"howler": "^2.2.3",
 		"solid-js": "^1.6.4",
 		"solid-p5-wrapper": "1.0.5",
 		"the-new-css-reset": "^1.8.4"
 	},
 	"devDependencies": {
+		"@types/howler": "^2.2.7",
 		"vite": "^4.0.0",
 		"vite-plugin-solid": "^2.5.0"
 	}
